cortex/envoy.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8081
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - '*'
              cors:
                allow_origin_string_match:
                - exact: '*'
                allow_methods: GET, POST, OPTIONS
                allow_headers: X-Stack-Version, Content-Type
                expose_headers: X-Stack-Version
              routes:
              - match:
                  prefix: /app1/main/
                route:
                  cluster: app1-service-a-0-0-36
                  prefix_rewrite: /
                request_headers_to_add:
                - header:
                    key: X-App-Name
                    value: app1
                - header:
                    key: X-App-Version
                    value: '1'
              - match:
                  prefix: /app1/service-a/
                route:
                  cluster: app1-service-a-0-0-36
                  prefix_rewrite: /
                request_headers_to_add:
                - header:
                    key: X-App-Name
                    value: app1
                - header:
                    key: X-App-Version
                    value: '1'
              - match:
                  prefix: /app2/main/
                route:
                  cluster: app2-service-y-0-0-1
                  prefix_rewrite: /
                request_headers_to_add:
                - header:
                    key: X-App-Name
                    value: app2
                - header:
                    key: X-App-Version
                    value: '1'
              - match:
                  prefix: /app2/service-y/
                route:
                  cluster: app2-service-y-0-0-1
                  prefix_rewrite: /
                request_headers_to_add:
                - header:
                    key: X-App-Name
                    value: app2
                - header:
                    key: X-App-Version
                    value: '1'
              - match:
                  prefix: /shared-app/service-s/
                route:
                  cluster: app1-service-a-0-0-36
                  prefix_rewrite: /
                request_headers_to_add:
                - header:
                    key: X-App-Name
                    value: app1
                - header:
                    key: X-App-Version
                    value: '1'
              - match:
                  prefix: /app1/service-a/
                  headers:
                  - name: X-App-Name
                    string_match:
                      exact: app1
                  - name: X-App-Version
                    string_match:
                      exact: '1'
                route:
                  cluster: app1-service-a-0-0-36
                  prefix_rewrite: /
              - match:
                  prefix: /app1/service-a/
                  headers:
                  - name: X-App-Name
                    string_match:
                      exact: app1
                  - name: X-App-Version
                    string_match:
                      exact: '2'
                route:
                  cluster: app1-service-a-0-0-36
                  prefix_rewrite: /
              - match:
                  prefix: /app1/service-a/
                  headers:
                  - name: X-App-Name
                    string_match:
                      exact: app1
                route:
                  cluster: app1-service-a-0-0-36
                  prefix_rewrite: /
              - match:
                  prefix: /app1/service-a/
                route:
                  cluster: app1-service-a-0-0-36
                  prefix_rewrite: /
              - match:
                  prefix: /app1/service-b/
                  headers:
                  - name: X-App-Name
                    string_match:
                      exact: app1
                  - name: X-App-Version
                    string_match:
                      exact: '1'
                route:
                  cluster: app1-service-b-0-0-7
                  prefix_rewrite: /
              - match:
                  prefix: /app1/service-b/
                  headers:
                  - name: X-App-Name
                    string_match:
                      exact: app1
                  - name: X-App-Version
                    string_match:
                      exact: '2'
                route:
                  cluster: app1-service-b-0-0-8
                  prefix_rewrite: /
              - match:
                  prefix: /app1/service-b/
                  headers:
                  - name: X-App-Name
                    string_match:
                      exact: app1
                route:
                  cluster: app1-service-b-0-0-7
                  prefix_rewrite: /
              - match:
                  prefix: /app1/service-b/
                route:
                  cluster: app1-service-b-0-0-7
                  prefix_rewrite: /
              - match:
                  prefix: /app2/service-y/
                  headers:
                  - name: X-App-Name
                    string_match:
                      exact: app2
                  - name: X-App-Version
                    string_match:
                      exact: '1'
                route:
                  cluster: app2-service-y-0-0-1
                  prefix_rewrite: /
              - match:
                  prefix: /app2/service-y/
                  headers:
                  - name: X-App-Name
                    string_match:
                      exact: app2
                route:
                  cluster: app2-service-y-0-0-1
                  prefix_rewrite: /
              - match:
                  prefix: /app2/service-y/
                route:
                  cluster: app2-service-y-0-0-1
                  prefix_rewrite: /
              - match:
                  prefix: /shared-app/service-s/
                  headers:
                  - name: X-App-Name
                    string_match:
                      exact: app1
                  - name: X-App-Version
                    string_match:
                      exact: '1'
                route:
                  cluster: shared-app-service-s-0-0-4
                  prefix_rewrite: /
              - match:
                  prefix: /shared-app/service-s/
                  headers:
                  - name: X-App-Name
                    string_match:
                      exact: app1
                  - name: X-App-Version
                    string_match:
                      exact: '2'
                route:
                  cluster: shared-app-service-s-0-0-5
                  prefix_rewrite: /
              - match:
                  prefix: /shared-app/service-s/
                  headers:
                  - name: X-App-Name
                    string_match:
                      exact: app1
                route:
                  cluster: shared-app-service-s-0-0-4
                  prefix_rewrite: /
              - match:
                  prefix: /shared-app/service-s/
                  headers:
                  - name: X-App-Name
                    string_match:
                      exact: app2
                  - name: X-App-Version
                    string_match:
                      exact: '1'
                route:
                  cluster: shared-app-service-s-0-0-4
                  prefix_rewrite: /
              - match:
                  prefix: /shared-app/service-s/
                  headers:
                  - name: X-App-Name
                    string_match:
                      exact: app2
                route:
                  cluster: shared-app-service-s-0-0-4
                  prefix_rewrite: /
              - match:
                  prefix: /shared-app/service-s/
                  headers:
                  - name: X-App-Name
                    string_match:
                      exact: shared-app
                  - name: X-App-Version
                    string_match:
                      exact: '1'
                route:
                  cluster: shared-app-service-s-0-0-4
                  prefix_rewrite: /
              - match:
                  prefix: /shared-app/service-s/
                  headers:
                  - name: X-App-Name
                    string_match:
                      exact: shared-app
                  - name: X-App-Version
                    string_match:
                      exact: '2'
                route:
                  cluster: shared-app-service-s-0-0-5
                  prefix_rewrite: /
              - match:
                  prefix: /shared-app/service-s/
                  headers:
                  - name: X-App-Name
                    string_match:
                      exact: shared-app
                route:
                  cluster: shared-app-service-s-0-0-4
                  prefix_rewrite: /
              - match:
                  prefix: /shared-app/service-s/
                route:
                  cluster: shared-app-service-s-0-0-4
                  prefix_rewrite: /
              - match:
                  prefix: /
                direct_response:
                  status: 404
                  body:
                    inline_string: Invalid API Route
          http_filters:
          - name: envoy.filters.http.cors
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.http.cors.v3.CorsPolicy
          - name: envoy.filters.http.router
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: app1-service-a-0-0-36
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: app1-service-a-0-0-36
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: app1-service-a-0-0-36
                port_value: 80
  - name: app1-service-b-0-0-7
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: app1-service-b-0-0-7
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: app1-service-b-0-0-7
                port_value: 80
  - name: app1-service-b-0-0-8
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: app1-service-b-0-0-8
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: app1-service-b-0-0-8
                port_value: 80
  - name: app2-service-y-0-0-1
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: app2-service-y-0-0-1
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: app2-service-y-0-0-1
                port_value: 80
  - name: shared-app-service-s-0-0-4
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: shared-app-service-s-0-0-4
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: shared-app-service-s-0-0-4
                port_value: 80
  - name: shared-app-service-s-0-0-5
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: shared-app-service-s-0-0-5
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: shared-app-service-s-0-0-5
                port_value: 80
